# taggsystem

./: CMakeLists.txt  README.md  memo.md  platformio.ini
.github/workflows/: platformio_build.yml
hardware-tests/rfcreader/: platformio.ini
hardware-tests/rfcreader/src/: main.cpp
sim/: CMakeLists.txt  nativesim.cpp
sim/include/: Arduino.h  EEPROM.h  MFRC522.h  SPI.h
src/: archive.cpp  archive.h  basicoptional.h  cardreader.cpp  cardreader.h  led.cpp  led.h  main.cpp  pinconfiguration.h  state.cpp  state.h  uidt.h  users.cpp  users.h
test/: state_test.cpp  testclasses.cpp  testclasses.h  user_test.cpp
